--- a/src/app/view_components/offer-list/offer-list.component.html
+++ b/src/app/view_components/offer-list/offer-list.component.html
@@ -3,7 +3,7 @@ top: var(--menu-height);
 position: absolute;
 width: calc(100% - 20px);">
   <div class="container">
-    <offer-details *ngFor="let offer of offers" [offer]="offer"></offer-details>
+    <post *ngFor="let post of offers" [post]="post"></post>
   </div>
 
 
