--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,7 +56,7 @@
         <i class="material-icons">info</i>
         About
       </button>
-      <button mat-button (click)="toggleSelector($event)" routerLink="{{ '/profile/user/'+user.id }}">
+      <button mat-button (click)="toggleSelector($event)" routerLink="{{ '/profile/user/'+user.email }}">
         <i class="material-icons">account_box</i>
         My profile
       </button>
@@ -80,7 +80,7 @@
       <b>2</b>
     </button>
     <button mat-button (click)="disconnect()" routerLink="/login">
-      <i class="material-icons">{{ user ? 'exit_to_app':'exit_to_app'}}</i>
+      <i class="material-icons">{{ user ? 'exit_to_app':'how_to_reg'}}</i>
     </button>
   </div>
 </mat-toolbar>
