--- a/src/app/subcomponents/post/post.component.html
+++ b/src/app/subcomponents/post/post.component.html
@@ -1,40 +1,62 @@
-<mat-card style="margin-top:10px;" @develop [ngClass]="{'noEmbed' : !embed}" (click)="goto()">
+<mat-card style="margin-top:10px;" @develop [ngClass]="{'noEmbed' : !embed}">
+
+  <div class="userData" *ngIf="!embed">
+    <div class="profileImage">
+      <div class="img" [ngStyle]="{'background-image': 'url(' + post.owner.imageUrl + ')'}"></div>
+    </div>
+    <div>
+      <h1>
+        {{ post.owner['email'] || post.owner['title'] }}
+      </h1>
+      <h4>
+        0000000000000000
+      </h4>
+    </div>
+  </div>
+
   <mat-card-content>
-    <mat-card-info>
-      <div class="Image" [attr.focus]="false" (click)="toggleFocus($event)">
+    <mat-card-info (click)="goto()">
+      <div class="Image" [attr.focus]="false" (click)="toggleFocus($event)" *ngIf="post.imageUrl && post.imageUrl.toString() !== ''">
         <div class="img" [ngStyle]="{'background-image': 'url(' + post.imageUrl + ')'}"></div>
       </div>
 
       <mat-card-contents>
         <mat-card-header>
+          <mat-card-badges>
+            <post-badge class="{{ badge.category }}" *ngFor="let badge of post.badges" [badge]="badge"></post-badge>
+          </mat-card-badges>
           <mat-card-title>
             {{post.title}}
           </mat-card-title>
 
           <mat-card-subtitle>
             <span>&nbsp;</span>
-            <mat-card-badges>
-              <post-badge class="{{ badge.category }}" *ngFor="let badge of post.badges" [badge]="badge"></post-badge>
-            </mat-card-badges>
+
           </mat-card-subtitle>
 
         </mat-card-header>
-        <p *ngIf="embed" (click)="readMore($event)" [attr.shrink_text]="true">
+        <p (click)="readMore($event)" [attr.shrink_text]="true">
           <span>
             {{post.description}}<br>
           </span>
         </p>
-
       </mat-card-contents>
-      <p *ngIf="!embed" (click)="readMore($event)" [attr.shrink_text]="true">
-        <span>
-          {{post.description}}<br>
-        </span>
-      </p>
+
     </mat-card-info>
     <mat-card-actions>
-      <button mat-button>Liker</button>
-      <!-- <button mat-button>Ajouter aux favoris</button> -->
+      <button mat-button routerLink="{{ '/post/' + post.id }}"
+        mat-icon-button aria-label="Visit profile">
+        <mat-icon>zoom_out_map</mat-icon>
+      </button>
+      <button mat-icon-button aria-label="Like">
+        <mat-icon>star</mat-icon>
+      </button>
+      <button mat-icon-button aria-label="Comment">
+        <mat-icon>comment</mat-icon>
+      </button>
+      <button mat-icon-button aria-label="Settings">
+        <mat-icon>edit</mat-icon>
+      </button>
     </mat-card-actions>
   </mat-card-content>
 
