--- a/src/app/view_components/user-profile/user-profile.component.html
+++ b/src/app/view_components/user-profile/user-profile.component.html
@@ -3,17 +3,16 @@
 
   <mat-card-content>
     <div class="panel-1" @developDown>
-      <user-details *ngIf="usertype === 'user'" [user]="user" [embedded]="true"></user-details>
+      <user-details *ngIf="usertype === 'user'" [user]="user" [iscurrentuser]="user.id === this.currentUserId" [embedded]="true"></user-details>
       <company-details *ngIf="usertype === 'company'" [company]="user" [embedded]="true"></company-details>
     </div>
 
     <div class="mat-card-info">
         <div *ngFor="let post of userposts">
-          <offer-details [offer]="post" *ngIf="post.type === 'offer' && this.filter.doSatisfy(post)"></offer-details>
-          <post [embed]="true" [post]="post" *ngIf="post.type !== 'offer' && this.filter.doSatisfy(post)"></post>
+          <post [embed]="true" [post]="post" *ngIf="this.filter.doSatisfy(post)"></post>
         </div>
-        <div class="mat-spinner" [ngClass]="{'bottom': this.userposts !== [] }">
-          <mat-spinner *ngIf="loading_state"></mat-spinner>
+        <div *ngIf="loading_state" class="mat-spinner" [ngClass]="{'bottom': this.userposts !== [] }">
+          <mat-spinner></mat-spinner>
         </div>
     </div>
 
