--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -32,8 +32,20 @@ app-login {
   --menu-height: 64px;
 }
 /* Cards */
-
+mat-card-toolbar{
+  width: 100vw;
+}
+post-page{
+  display: block;
+    position: fixed;
+    overflow-y: auto;
+    overflow-x: hidden;
+    width: 100%;
+    height: 100vh;
+    left: .5%;
+}
 /* Buttons */
+
 mat-card-actions {
   display: inline-flex!important;
   flex-direction: row-reverse;
