--- a/src/app/view_components/home/home.component.css
+++ b/src/app/view_components/home/home.component.css
@@ -33,19 +33,28 @@ form.createPost{
   padding: 10pt;
   justify-content: flex-start;
 }
-form.createPost textarea{
-  resize: vertical;
-  width: 100%;
-  max-width: 90%;
-  padding: 1% 5%;
-  margin: 1% 0%;
-  outline: none;
-  border: none;
+form.createPost div.newPost{
   background-color: #ddd5;
   border-radius: 3vmin;
+  padding: 1% 3%;
+
+}
+form.createPost div.newPost>*{
+  width: 100%;
+  margin: 0%;
+  margin-top: 1%;
+  outline: none;
+  border: none;
+  background-color: transparent;
   font-size: xx-large;
   font-family: "Helvetica";
-
+}
+form.createPost div.newPost textarea{
+  resize: vertical;
+  margin-bottom: 1%;
+}
+form.createPost div.newPost input{
+  border-bottom: 1pt solid #ddda;
 }
 @media (orientation:portrait){
   div.Image{
