--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -46,14 +46,14 @@ post-page{
 }
 /* Buttons */
 
-mat-card-actions {
+mat-card-actions{
   display: inline-flex!important;
+  align-items: baseline;
   flex-direction: row-reverse;
   flex-wrap: nowrap;
   position: relative;
   padding: 0px!important;
   margin: 8px 0px!important;
-
   width: 100%;
 }
 button div{
@@ -62,10 +62,12 @@ button div{
   align-content: center;
   display: flex;
 }
+mat-card-actions button, .mat-card-actions button, mat-card-actions mat-form-field, .mat-card-actions mat-form-field{
+  margin-right: 1%;
+}
 mat-card-actions button, .mat-card-actions button{
   background-color: #eee!important;
   color: var(--primary-color)!important;
-  margin-right: 1%;
 }
 mat-card-actions button:first-child, .mat-card-actions button:first-child{
   background-color: var(--primary-color)!important;
