--- a/src/app/view_components/home/home.component.css
+++ b/src/app/view_components/home/home.component.css
@@ -33,28 +33,25 @@ form.createPost{
   padding: 10pt;
   justify-content: flex-start;
 }
-form.createPost div.newPost{
-  background-color: #ddd5;
+form.createPost section.header {
+  display: flex;
+  padding: 0% 2%;
+}
+
+form.createPost section.newPost{
+  background-color: transparent;
   border-radius: 3vmin;
-  padding: 1% 3%;
+  padding: 0% 2%;
 
 }
-form.createPost div.newPost>*{
+form.createPost section.newPost>*{
   width: 100%;
-  margin: 0%;
-  margin-top: 1%;
-  outline: none;
-  border: none;
-  background-color: transparent;
-  font-size: xx-large;
   font-family: "Helvetica";
 }
-form.createPost div.newPost textarea{
-  resize: vertical;
-  margin-bottom: 1%;
-}
-form.createPost div.newPost input{
-  border-bottom: 1pt solid #ddda;
+form.createPost section>h3{
+  margin: 0;
+  width: 100%;
+  color: var(--secondary-color);
 }
 @media (orientation:portrait){
   div.Image{
