Included post type depending new post components

--- a/src/app/minicomponents/post-filter/post-filter.component.css
+++ b/src/app/minicomponents/post-filter/post-filter.component.css
@@ -7,7 +7,7 @@ mat-card.badges {
   display: flex;
   flex-direction: column;
   position: sticky;
-  top: calc(var(--menu-height));
+  top: calc(0*var(--menu-height));
   z-index: 2;
   background-color: #fff!important;
   color: #424242;
