--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,7 +56,7 @@
         <i class="material-icons">info</i>
         About
       </button>
-      <button mat-button (click)="toggleSelector($event)" routerLink="{{ '/profile/user/'+user.email }}">
+      <button mat-button (click)="toggleSelector($event)" routerLink="{{ '/user/'+user.email }}">
         <i class="material-icons">account_box</i>
         My profile
       </button>
