--- a/src/app/subcomponents/post/post.component.css
+++ b/src/app/subcomponents/post/post.component.css
@@ -11,6 +11,7 @@ mat-card{
 .mat-card-header {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap-reverse;
 }
 
 mat-card-info{
@@ -48,7 +49,7 @@ div.Image::before {
   width: 100%;
   background-color: var(--primary-color);
   mix-blend-mode: luminosity;
-  opacity: 0.2;
+  opacity: 0.7;
   height: 100%;
   position: absolute;
   top: 0;
@@ -69,11 +70,7 @@ div.Image::after {
     text-align: center;
     padding: calc(100% - 8vw) 0%;
 }
-div.Image:hover::after {
-  opacity: 1;
-  transform: translateY(0%);
-  bottom: 0vh;
-}
+
 div.Image:hover div.img {
   transform: translate(-50%, -50%) scale(1.25);
 }
@@ -156,7 +153,6 @@ div.userData .profileImage+div>h4{
     flex-shrink: 0;
   }
   mat-card-contents{
-    width: unset;
     flex-shrink: 1;
   }
   mat-card-info{
