--- a/src/app/view_components/company-profile/company-profile.component.css
+++ b/src/app/view_components/company-profile/company-profile.component.css
@@ -12,7 +12,7 @@ mat-card-content{
 }
 mat-card-content>*:first-child{
   flex-grow: 0;
-  width: 50%;
+  max-width: 30%;
   height: 100%;
 }
 .mat-card-subtitle {
@@ -63,8 +63,10 @@ mat-tab-group{
   }
   mat-card-content>*:first-child{
     flex-grow: 1;
+    max-width: 100%;
     width: inherit;
   }
+
   .panel-1 {
     position: relative;
     top: 0;
